kubernetes/misc/3d/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  namespace: 3d
  name: 3d-ingress
  annotations:
    external-dns.alpha.kubernetes.io/target: 192.168.10.20
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`3d.kalexlab.xyz`)
      services:
        - name: printer
          port: 80
  tls:
    secretName: 3d-ingress-certificate-secret
